--- a/KanNaim2010/Kan-Naim-Main/FormManageRightSideMenuLinks.resx
+++ b/KanNaim2010/Kan-Naim-Main/FormManageRightSideMenuLinks.resx
@@ -120,6 +120,12 @@
   <metadata name="LocationFromTheTop.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="ItemId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>663, 54</value>
+  </metadata>
   <metadata name="tableMenuRightSideBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>219, 54</value>
   </metadata>
